--- a/Office/Client/activation/0xcaa70007-and-0xcaa80000.md
+++ b/Office/Client/activation/0xcaa70007-and-0xcaa80000.md
@@ -81,7 +81,7 @@ Are you behind a proxy server? If you're not sure, ask your administrator. If so
 1.	Type the following command, and then press Enter:
 `netsh winhttp set proxy < Address of proxy server >`
   
-You need to allow the URLs and IP addresses in [this list](/microsoft-365/enterprise/urls-and-ip-address-ranges?view=o365-worldwide#microsoft-365-common-and-office-online).
+You need to allow the URLs and IP addresses in [this list](/microsoft-365/enterprise/urls-and-ip-address-ranges?view=o365-worldwide&preserve-view=true#microsoft-365-common-and-office-online).
   
 You can also allow Microsoft 365 to bypass the proxy server by creating a PAC file. For more information about creating a PAC file, see [Managing Office 365 endpoints](/microsoft-365/enterprise/managing-office-365-endpoints).
 <br/><br/>
