--- a/Office/Client/installation/error-code-30010-45-or-30088-26.md
+++ b/Office/Client/installation/error-code-30010-45-or-30088-26.md
@@ -7,7 +7,7 @@ localization_priority: Normal
 search.appverid: 
 - MET150
 audience: ITPro
-ms.service: office-perpetual-itpro
+ms.prod: office 365
 ms.topic: article
 ms.author: v-matthamer
 ms.custom: 
