--- a/Office/Client/installation/error-code-30010-45-or-30088-26.md
+++ b/Office/Client/installation/error-code-30010-45-or-30088-26.md
@@ -31,7 +31,7 @@ If you try to install Microsoft 365 Apps while using FSLogix to manage profiles,
 > We're sorry, we ran into a problem while updating Office. Please try again after restarting your computer. If you continue to experience problems, repair Office from 'Programs and Features' in the Control Panel.<br>
 > Error Code: 30088-26
 
-When you choose **Close** on the 30010-45 error message, you will also encounter the following error:
+When you select **Close** on the 30010-45 error message, you'll also encounter the following error:
 
 > Couldn't install<br>
 > We're sorry, we had a problem installing your Office program(s).<br>
@@ -45,13 +45,11 @@ FSLogix is set to hide officeclicktorun.exe or another Office executable.
 
 ## Resolution
 
-1. From Start, type *cmd*. Right-click **Command Prompt** in the search results, and then select **Run as administrator**.
+1. Select **Start**, and then enter *cmd*. Right-click **Command Prompt** in the search results, and then select **Run as administrator**. 
 
-1. Type the following command at the command prompt and then press Enter:
+1. At the command prompt, enter `“C:\Program Files\FSLogix\Apps\frx.exe" list-rules`, and then press **Enter**:
 
-    `“C:\Program Files\FSLogix\Apps\frx.exe" list-rules`
-
-1. Check for rules in the list that hide Office executables. Example:
+1. In the list, check for rules that hide Office executables. For example:
 
     ```powershell
     C:\ProgramData\Microsoft\Windows\Start Menu\Programs\OneNote.lnk -> [Hide]
@@ -66,4 +64,4 @@ FSLogix is set to hide officeclicktorun.exe or another Office executable.
 
 1. [Uninstall Office automatically](https://support.microsoft.com/en-us/office/uninstall-office-automatically-9ad57b43-fa12-859a-9cf0-b694637b3b05).
 
-1. Restart the device and try installing Microsoft 365 Apps again.
+1. Restart the device, and then try installing Microsoft 365 Apps again.
