--- a/Office/Client/installation/error-code-30010-45-or-30088-26.md
+++ b/Office/Client/installation/error-code-30010-45-or-30088-26.md
@@ -1,6 +1,6 @@
 ---
-title: Error code 30010-45 or 30088-26 installing Microsoft 365 Apps
-description: Provides steps to fix Error code 30010-45 or 30088-26 setup errors.
+title: Error code 30010-45 or 30088-26 when installing Microsoft 365 Apps
+description: Provides steps to fix error code 30010-45 or 30088-26 Setup errors when you install Microsoft 365 Apps.
 author: rahulp
 manager: dcscontentpm
 localization_priority: Normal
@@ -17,11 +17,11 @@ appliesto:
 - Microsoft 365 Apps
 ---
 
-# Error code 30010-45 or 30088-26 installing Microsoft 365 Apps
+# Error code 30010-45 or 30088-26 when installing Microsoft 365 Apps
 
 ## Symptoms
 
-If you try to install Microsoft 365 Apps while using FSLogix to manage profiles, you might encounter one of the following errors:
+If you try to install Microsoft 365 Apps while you're using FSLogix to manage profiles, you receive one of the following error messages:
 
 > Something went wrong<br>
 > Sorry, we ran into a problem.<br>
@@ -31,7 +31,7 @@ If you try to install Microsoft 365 Apps while using FSLogix to manage profiles,
 > We're sorry, we ran into a problem while updating Office. Please try again after restarting your computer. If you continue to experience problems, repair Office from 'Programs and Features' in the Control Panel.<br>
 > Error Code: 30088-26
 
-When you select **Close** on the 30010-45 error message, you'll also encounter the following error:
+When you select **Close** in the "30010-45" error message window, you also receive the following error message:
 
 > Couldn't install<br>
 > We're sorry, we had a problem installing your Office program(s).<br>
@@ -41,7 +41,7 @@ When you select **Close** on the 30010-45 error message, you'll also encounter t
 
 ## Cause
 
-FSLogix is set to hide officeclicktorun.exe or another Office executable.
+FSLogix is set to hide Officeclicktorun.exe or another Office executable.
 
 ## Resolution
 
@@ -64,4 +64,4 @@ FSLogix is set to hide officeclicktorun.exe or another Office executable.
 
 1. [Uninstall Office automatically](https://support.microsoft.com/en-us/office/uninstall-office-automatically-9ad57b43-fa12-859a-9cf0-b694637b3b05).
 
-1. Restart the device, and then try installing Microsoft 365 Apps again.
+1. Restart the device, and then try again to install Microsoft 365 Apps.
