--- a/Office/Client/installation/error-code-30010-45-or-30088-26.md
+++ b/Office/Client/installation/error-code-30010-45-or-30088-26.md
@@ -36,7 +36,7 @@ When you select **Close** in the "30010-45" error message window, you also recei
 > Couldn't install<br>
 > We're sorry, we had a problem installing your Office program(s).<br>
 > Is your internet connection working? Do you have enough free space on your main hard drive?<br>
-> Please try installing again after you've check the above.<br>
+> Please try installing again after you've checked the above.<br>
 > Error Code: 0-2031 (17004)
 
 ## Cause
